# nwpu-transcript-to-excel

./: README.md  pyproject.toml  课程分学期Excel上传须知.docx  课程分学期模版.xlsx
src/nwpu_transcript/: __init__.py  cli.py  excel.py  parser.py
